implements Prisma as a database client.

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "typescript-eslint": "^8.25.0"
   },
   "dependencies": {
+    "@prisma/client": "^6.4.1",
     "axios": "^1.7.9",
     "compression": "^1.8.0",
     "cors": "^2.8.5",
@@ -45,6 +46,7 @@
     "mongoose": "^8.10.2",
     "node-cache": "^5.1.2",
     "pg": "^8.13.3",
+    "prisma": "^6.4.1",
     "uuid": "^11.1.0"
   }
 }
