--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ PORT=3000
 
 # Chave da API de notícias
 # Obtenha sua chave em: https://newsapi.org/
-NEWS_API_KEY=sua_chave_api_aqui
+NEWS_API_KEY=your-news-api-key
 
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
@@ -12,4 +12,5 @@ NEWS_API_KEY=sua_chave_api_aqui
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb://localhost:27017/<database-name>"
+# Replace with the URL of your local MongoDB Atlas or MongoDB database.
+DATABASE_URL="mongodb+srv://<username>:<password>@<cluster-url-or-hostname>/news?retryWrites=true&w=majority" 
